--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,13 +1,53 @@
+/* Small devices (landscape phones, less than 768px) */
+@media (min-width: 320px) and (max-width: 1000px) {
+  .click-bl {
+    width: 5em;
+    height: 5em;
+    margin-top: -5em;
+    margin-left: -5em;
+    top: 20%;
+    left: 10%;
+    position: fixed;
+  }
+
+  .count {
+    display: contents;
+  }
+
+  .counter-text {
+    font-size: 5rem;
+  }
+}
+
+@media (min-width: 1000px) and (max-width: 1280px) {
+  .click-bl {
+    width: 3em;
+    height: 3em;
+    margin-top: -3em;
+    margin-left: -3em;
+    top: 20%;
+    left: 10%;
+    position: fixed;
+  }
+
+  .count {
+    display: contents;
+  }
+}
+
+@media (min-width: 1281px) {
 /* MY OWN CSS */
 .click-bl {
   width: 2em;
   height: 2em;
   margin-top: -2em;
   margin-left: -2em;
-  top: 10%;
+  top: 20%;
   left: 10%;
   position: fixed;
 }
+
 .count {
   display: contents;
+}
 }
