--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5,8 +5,8 @@
     height: 5em;
     margin-top: -5em;
     margin-left: -5em;
-    top: 10%;
-    left: 10%;
+    top: 50%;
+    left: 50%;
     position: fixed;
   }
 
@@ -15,7 +15,7 @@
   }
 
   .Mytext {
-    font-size: 5rem;
+    font-size: 50px;
   }
 }
 
@@ -25,8 +25,8 @@
     height: 3em;
     margin-top: 0em;
     margin-left: 0em;
-    top: 10%;
-    left: 10%;
+    top: 50%;
+    left: 50%;
     position: fixed;
   }
 
@@ -36,29 +36,71 @@
 }
 
 @media (min-width: 1281px) {
-.click-bl {
-  width: 2em;
-  height: 2em;
-  margin-top: -2em;
-  margin-left: -2em;
-  top: 10%;
-  left: 10%;
-  position: fixed;
+  .click-bl {
+    width: 32px;
+    height: 32px;
+    margin-top: -16px;
+    margin-left: -16px;
+    top: 50%;
+    left: 50%;
+    position: fixed;
+  }
+
+  .count {
+    display: contents;
+  }
 }
 
-.count {
+/* MY OWN CSS */
+.scr-width {
   display: contents;
 }
-}
 
-  /* MY OWN CSS */
-.scr-width {
-    display: contents;
-}
 .scr-height {
-    display: contents;
+  display: contents;
 }
 
-.click-bl{
--webkit-transition: all 1s ease; -moz-transition: all 1s ease; -o-transition: all 1s ease; -ms-transition: all 1s ease; transition: all 1s ease;
+.timer-time {
+  display: contents;
+}
+
+.click-bl {
+  /* ANIMATION */
+  -webkit-transition: top 0.5s ease, left 0.5s ease;
+  -moz-transition: top 0.5s ease, left 0.5s ease;
+  -o-transition: top 0.5s ease, left 0.5s ease;
+  -ms-transition: top 0.5s ease, left 0.5s ease;
+  transition: top 0.5s ease, left 0.5s ease;
+}
+
+.bg-color {
+  background-color: #dc3545;
+}
+
+.plus-time {
+  display: inline;
+  color: green;
+  opacity: 1;
+  /* ANIMATION */
+  -webkit-transition: all 0.25s ease;
+  -moz-transition: all 0.25s ease;
+  -o-transition: all 0.25s ease;
+  -ms-transition: all 0.25s ease;
+  transition: all 0.25s ease;
+}
+
+.Mytext {
+  -webkit-touch-callout: none;
+  /* iOS Safari */
+  -webkit-user-select: none;
+  /* Chrome/Safari/Opera */
+  -khtml-user-select: none;
+  /* Konqueror */
+  -moz-user-select: none;
+  /* Firefox */
+  -ms-user-select: none;
+  /* Internet Explorer/Edge */
+  user-select: none;
+  /* Non-prefixed version, currently
+                                  not supported by any browser */
 }
